@@ -135,6 +135,7 @@ Bug fixes:
 - PR#6024: Format syntax for printing @ is incompatible with 3.12.1
 - PR#6001: Reduce the memory used by compiling Camlp4
 - PR#6032: better Random.self_init under Windows
+- PR#6033: Matching.inline_lazy_force needs eta-expansion (command-line flags)
 
 Internals:
 - Moved debugger/envaux.ml to typing/envaux.ml to publish env_of_only_summary
